--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
 				<p class="texto">
 
-					<span class="negrito">Proposta Comercial - Serviços de Registro e Proteção de Propriedade Intelectual (INPI)</span>
+					<span class="negrito">a. Proposta Comercial - Serviços de Registro e Proteção de Propriedade Intelectual (INPI)</span>
 <br>
 					A presente proposta tem como objetivo oferecer serviços especializados de assessoria e
 					acompanhamento no processo de registro de marcas, junto ao Instituto Nacional da Propriedade
@@ -192,7 +192,7 @@
 					-Elaboração e protocolo de pedido de registro de marca junto ao INPI; <br>
 					-Acompanhamento de todo o processo até a concessão do registro; <br>
 					-Acompanhamento de eventuais oposições e recursos administrativos. <br>
-					<span class="negrito">a.</span>o valor do investimento
+					<span class="negrito">a.1</span>O valor do investimento
 					será de R$1.500,00 (mil e quinhentos reais).
 
 
